cleanup unused imports/methods